k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
        - name: backend
          image: fa28/backend-integration-cloud:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
#          livenessProbe:
#            httpGet:
#              path: /api/health
#              port: 8080
#            initialDelaySeconds: 30
#            periodSeconds: 10
#          readinessProbe:
#            httpGet:
#              path: /api/health
#              port: 8080
#            initialDelaySeconds: 10
#            periodSeconds: 5
